[gd_scene load_steps=5 format=3 uid="uid://btfq87i56gxec"]

[ext_resource type="Script" uid="uid://dqekqy5ydti6h" path="res://horokko_bomb.gd" id="1_ixvga"]

[sub_resource type="SphereShape3D" id="SphereShape3D_nx3e3"]
radius = 0.05

[sub_resource type="SphereMesh" id="SphereMesh_ygj0m"]
radius = 0.05
height = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_ixvga"]
radius = 0.07

[node name="Horokko Bomb" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_ixvga")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_nx3e3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_ygj0m")

[node name="Starter" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Explode" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Damage" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Damage"]
shape = SubResource("SphereShape3D_ixvga")

[connection signal="timeout" from="Starter" to="." method="_on_starter_timeout"]
[connection signal="timeout" from="Explode" to="." method="_on_explode_timeout"]
[connection signal="body_entered" from="Damage" to="." method="_on_damage_body_entered"]
